Check null pointer for arguments of Unicode conversion util functions, bug 151769, r=ducarroz, sr=bienvenu.